[package]
name = "rudy"
version = "0.0.1"
authors = ["anurse <andrew@andrewnurse.net>"]

[dependencies]
piston = "0.1.4"
piston2d-graphics = "0.1.4"
pistoncore-glutin_window = "0.1.0"
piston2d-opengl_graphics = "0.1.0"glutin = "0.1.6"
log = "0.3.1"
env_logger = "0.3.1"

[dependencies.remy]
version = "0.0.1"
path = "../remy"
